# SQL-Agent

./: .gitignore  Dockerfile  Dockerfile.sql_agent  README.md  docker-compose.yml  requirements.txt  sql_to_excel.py
agents/route_agent/: __init__.py  agent.py  agent_card.json  prompts.py  requirements.txt  server.py  task_manager.py  utils.py
api/: config.py
api/agents/excel_agent/: README.md  __main__.py  agent.py  pyproject.toml  task_manager.py
api/agents/sql_agent/: README.md  __main__.py  agent.py  pyproject.toml  task_manager.py
api/core/: config.py  database.py
api/hosts/cli/: README.md  __main__.py  push_notification_listener.py  pyproject.toml
api/hosts/multiagent/: agent.py  host_agent.py  pyproject.toml  remote_agent_connection.py  sql_excel_workflow.py
api/web/: README.md  __init__.py  __main__.py  app.py
api/web/templates/: index.html
core/: config.py  models.py  schema.py
