[project]
name = "a2a-excel-agent"
version = "0.1.0"
description = "Excel export agent with A2A Protocol"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.25.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
a2a-samples = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 